Closed Bug 1899249 Opened 1 year ago Closed 1 year ago

O_LARGEFILE value mismatch on musl libc

Categories

(Core :: Security: Process Sandboxing, defect)

Firefox 126
defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox128 --- fixed

People

(Reporter: ptrcnull, Assigned: ptrcnull)

Details

Attachments

(1 file)

With musl libc, fcntl.h contains the correct value of O_LARGEFILE, which may differ between architectures (e.g. powerpc has 020000, and aarch64 has 0400000, compared to usual 0100000); instead of hardcoding the value, a check for whether O_LARGEFILE is set to 0 (and if it's not, taking the actual value) would be more appropriate here.

Marking this as "Firefox 126", but the issue has been there since forever (at least Firefox 82.0.3).

Assignee: nobody → bugzilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

thanks for fixing that!

Pushed by alissy@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e1bfbb5ee467 Use actual O_LARGEFILE value whenever available. r=gerard-majax
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: