Bug 1899249 - Use actual O_LARGEFILE value whenever available. r=gerard-majax

Differential Revision: https://phabricator.services.mozilla.com/D211829